--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/check": "^0.3.2",
     "astro": "^4.0.5",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-yaml": "^4.1.2"
   }
 }
