--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@content/*": ["src/content/*"]
+      "@content/*": ["src/content/*"],
+      "@styles/*": ["src/styles/*"]
 
     }
   }
