--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.2",
     "astro": "^4.0.5",
+    "highlight.js": "^11.9.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
